<resources>
    <string name="app_name">NavyData</string>

    <string name="action_settings">Settings</string>
    <string name="check_box_intro">Welcome to the NavyData App!\nRead the descriptions of each
        tool\nand click on the button to access\n\n*Check box to dismiss</string>

    <string name="awaf">AWAF</string>
    <string name="data">DATA</string>
    <string name="links">LINKS</string>
    <string name="mrrr">MRRR</string>

    <string name="awaf_description">An Acronym Within An Acronym (AWA) Finder</string>
    <string name="data_description">Duty And Training Aide</string>
    <string name="links_description">Links I Never Know Sites</string>
    <string name="mrrr_description">Military Rank &amp; Rate Recognition</string>

    <string name="name">Rate/Name</string>
    <string name="unit">Unit</string>
    <string name="nosc">NOSC</string>
    <string name="nosc_uic">NOSC UIC</string>
    <string name="truic">TRUIC(Drill)</string>
    <string name="umuic">UMUIC(Billet)</string>
    <string name="mob_activity">MOB Activity</string>
    <string name="mob_billet">MOB Billet</string>
    <string name="ced">Anniversary</string>
    <string name="prd">PRD</string>
    <string name="eaos">EAOS</string>
    <string name="report_date">Report Date</string>
    <string name="rank_date">Date of Rank</string>
    <string name="clearance_date">Clearance Date</string>
    <string name="date_default">mmddyyyy</string>

    <string name="delete_button_text">Delete</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_data_text">Save Data</string>
    <string name="add_data_text">Add Data</string>
    <string name="edit_data_text">Edit Data</string>

    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_unit_list">UnitListActivity</string>
    <string name="title_activity_acronyms">AcronymsActivity</string>
    <string name="title_activity_military">MilitaryActivity</string>
    <string name="title_activity_service">ServiceMainActivity</string>
    <string name="title_activity_service_view">ServiceViewActivity</string>

    <string name="default_links">https://mypay.dfas.mil/mypay.aspx\n
        http://www.defensetravel.osd.mil/dts/site/index.jsp\n
        https://www.navycollege.navy.mil/smart_info.aspx\n
        https://www.tsp.gov/tsp/login.shtml\n
        http://carrentalcodes.org/us-government-car-rental-codes.html\n
        http://www.public.navy.mil/bupers-npc/enlisted/community/selres/Pages/default2.aspx\n
        https://www.public.navy.mil/nrh/Pages/default.aspx</string>


</resources>
