<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.downs.navydata.AddDataActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapCharacters"/>

    <EditText
        android:id="@+id/unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit"
        android:layout_below="@id/name"
        android:inputType="textCapCharacters"/>

    <EditText
        android:id="@+id/nosc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nosc"
        android:layout_below="@id/unit"
        android:inputType="textCapCharacters"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nosc"
        android:gravity="left"
        android:orientation="horizontal"
        android:id="@+id/uics">

        <EditText
            android:id="@+id/truic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/truic"
            android:inputType="number"/>

        <EditText
            android:id="@+id/umuic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/umuic"
            android:inputType="number" />

        <EditText
            android:id="@+id/nosc_uic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nosc_uic"
            android:inputType="number" />
    </LinearLayout>

    <EditText
        android:id="@+id/mob_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mob_activity"
        android:layout_below="@id/uics"
        android:inputType="textCapCharacters"/>

    <EditText
        android:id="@+id/mob_billet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mob_billet"
        android:layout_below="@id/mob_activity"
        android:inputType="textCapCharacters"/>



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mob_billet"
        android:columnCount="3">

        <!-- 1st row, spanning 3 columns -->


        <EditText
            android:id="@+id/prd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_default"
            android:inputType="date"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/eaos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_default"
            android:inputType="date"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/ced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_default"
            android:inputType="date"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/prd_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prd"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/description_margin" />

        <TextView
            android:id="@+id/eaos_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eaos"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/description_margin" />

        <TextView
            android:id="@+id/ced_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ced"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/description_margin" />

        <EditText
            android:id="@+id/report_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_default"
            android:inputType="date"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/rank_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_default"
            android:inputType="date"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/clearance_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_default"
            android:inputType="date"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/report_date_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_date"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/description_margin" />

        <TextView
            android:id="@+id/rank_date_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank_date"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/description_margin" />

        <TextView
            android:id="@+id/clearance_date_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearance_date"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/description_margin" />



    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel_button_text"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveSailorData"
            android:text="@string/save_data_text" />
    </LinearLayout>
</RelativeLayout>

